--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cra-electron",
-  "description": "CRA + Electron sitting in a tree",
-  "author": "Kitze",
-  "version": "0.2.7",
+  "name": "TestReactApp",
+  "description": "Codedefective's test app",
+  "author": "Erdem AKBULUT",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "cross-env": "6.0.2",
@@ -10,6 +10,12 @@
     "electron-log": "^3.0.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "update-electron-app": "^1.2.0"
   },
   "devDependencies": {
